--- a/public/sites/all/themes/gesso/sass/partials/components/_comments.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_comments.scss
@@ -3,6 +3,10 @@
   margin: rhythm(1) 0 0 0;
   padding: rhythm(1.5) 0 0 0;
 
+  #comment-form {
+    border-bottom: 1px solid $border-color;
+  }
+
   .field-widget-text-textarea .text-format-wrapper .filter-wrapper {
     display: none; // hide comment field text format info
   }
@@ -17,11 +21,27 @@
   }
   
   .indented {
-    padding-left: 2em;
+    padding-left: 1em;
+    @include breakpoint(700px, $no-query: true) {
+      padding-left: 2em;
+    }
     .indented {
       .indented {
         .indented {
-          padding-left: 1em;
+          padding-left: 0.5em;
+          @include breakpoint(700px, $no-query: true) {
+            padding-left: 1em;
+          }
+          .indented {
+            .indented {
+              .indented {
+                padding-left: 0.25em;
+                @include breakpoint(700px, $no-query: true) {
+                  padding-left: 0.5em;
+                }
+              }
+            }
+          }
         }
       }
     }     
