--- a/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
@@ -18,7 +18,7 @@
   .form-item__description {
     @include adjust-font-size-to($font-size-md);
     @include hyphens(none);
-    color: $secondary-text-color;
+    //color: $secondary-text-color;
     font-size: em($font-size-md);
     font-style: italic;
     line-height: 1.4;
