--- a/public/sites/all/themes/gesso/sass/partials/components/_comment.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_comment.scss
@@ -6,7 +6,6 @@
     padding-bottom: 0.5em;
   }
   .field--comment-body {
-    min-height: 3em;
     p:last-child {
       margin-bottom: 0;
     }
@@ -25,6 +24,18 @@
 
 .comment__content {
   border: 1px solid $border-color;
+  min-height: 5em;
   padding: 0.75em;  
   position: relative;
+  &:before {
+    @include image-replace(12px,24px);
+    background: url(../images/bubble_arrow.png) no-repeat 0 0;
+    @include breakpoint(600px, $no-query: true) { // don't show at small sizes
+      content: "";
+      display: block;
+    }
+    left: -12px;
+    position: absolute;
+    top: 25px;
+  }
 }
