--- a/public/sites/all/themes/gesso/sass/partials/components/_comments.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_comments.scss
@@ -3,8 +3,10 @@
   margin: rhythm(1) 0 0 0;
   padding: rhythm(1.5) 0 0 0;
 
-  #comment-form {
+  .comment-form {
     border-bottom: 1px solid $border-color;
+    margin-bottom: 4em;
+    padding-bottom: 2em;
   }
 
   .field-widget-text-textarea .text-format-wrapper .filter-wrapper {
