added funding op card icon

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.mustache
@@ -1,5 +1,5 @@
 &lt;article class=&quot;card card--icons&quot;&gt;
-  &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
+  &lt;div class=&quot;card__number&quot;&gt;30,000,000&lt;/div&gt;
   &lt;div class=&quot;card__image&quot;&gt;
     &lt;a href=&quot;{{ url }}&quot;&gt;{{&gt; atoms-card-image }}&lt;/a&gt;
   &lt;/div&gt;
