--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/event-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/event-teaser@inprogress.mustache
@@ -1,5 +1,8 @@
 <article class="card">
   <h2 class="card__date">September 21</h2>
+  <div class="card__image">
+    <a href="{{ url }}">{{> atoms-card-image }}</a>
+  </div>
   <div class="card__content">
     <h3 class="card__primary-title"><a href="{{ url }}">{{ title }}</a></h3>
     <div class="card__meta">
