--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.mustache
@@ -1,5 +1,8 @@
 &lt;article class=&quot;card&quot;&gt;
   &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
+  &lt;div class=&quot;card__image&quot;&gt;
+    &lt;a href=&quot;{{ url }}&quot;&gt;{{&gt; atoms-card-image }}&lt;/a&gt;
+  &lt;/div&gt;
   &lt;div class=&quot;card__content&quot;&gt;
     &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;{{ url }}&quot;&gt;{{ title }}&lt;/a&gt;&lt;/h3&gt;
     &lt;div class=&quot;card__meta&quot;&gt;
