--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/funding-op-teaser@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/02-view-modes/funding-op-teaser@inprogress.mustache
@@ -1,5 +1,5 @@
 <article class="card card--icons">
-  <div class="card__number">$30,000,000</div>
+  <div class="card__number">30,000,000</div>
   <div class="card__image">
     <a href="{{ url }}">{{> atoms-card-image }}</a>
   </div>
