styling for new social login buttons on login and registration pages

--- a/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
@@ -7,9 +7,16 @@
   padding: 2em;
   
   #edit-lr-social-login-links {
-    border-bottom: 1px solid #cecfcb;
-    margin: 0 0 1.5em 0;
-    padding: 0 0 1.5em 0;
+    &:after {
+      border-bottom: 1px solid #cecfcb;
+      content: "Or sign up with your Email Address";
+      display: block;
+      font-size: 32px;
+      font-weight: bold;
+      margin: 2em 0 1em 0;
+      padding: 0 0 0.5em 0;
+      text-align: center;
+    }
   }
 
   .interfacecontainerdiv {
