--- a/public/sites/all/themes/gesso/sass/overrides/super_login/super-login.scss
+++ b/public/sites/all/themes/gesso/sass/overrides/super_login/super-login.scss
@@ -1,11 +1,3 @@
-///* Try to hide Page Titles on login pages */
-// #page-title,
-// h1#page-title,
-// h1.page-header{
-//   display:none;
-// }
- 
-
 #user-login,
 #user-pass {
   border: 2px solid #cecfcb;
@@ -18,23 +10,17 @@
   overflow: hidden;
   padding: 2em;
 
-  #edit-lr-social-login-links {
-    border-bottom: 1px solid #cecfcb;
-    margin: 0 0 1.5em 0;
-    padding: 0 0 1.5em 0;
-  }
-
   .interfacecontainerdiv {
     margin-left: -20px;
   }
 
   p.login-title {
-    color: #565a5c;
-    font-size: 2em;
-    font-weight: normal;
-    line-height: 1.1;
-    margin: 0 0 0.5em 0;
-    padding: 0;
+    border-bottom: 1px solid #cecfcb;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0 0 1em 0;
+    padding: 0 0 0.5em 0;
+    text-align: center;
   }
 
   .form-item-pass {
