minor tweaks to support drupal markup

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/community-detail@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/community-detail@inprogress.mustache
@@ -45,7 +45,7 @@
                 {{> organisms-innovation-teaser }}
               </div>
             {{/ listItems.three }}
-            <div class="view__footer">
+            <div class="view__more">
               <a href="#" class="view__all">View All Innovations</a>
             </div>
           </div>
@@ -61,7 +61,7 @@
                 {{> organisms-resource-teaser }}
               </div>
             {{/ listItems.three }}
-            <div class="view__footer">
+            <div class="view__more">
               <a href="#" class="view__all">View All Resources</a>
             </div>
           </div>
@@ -77,7 +77,7 @@
                 {{> organisms-funding-op-teaser }}
               </div>
             {{/ listItems.three }}
-            <div class="view__footer">
+            <div class="view__more">
               <a href="#" class="view__all">View All Funding Opportunies</a>
             </div>
           </div>
