--- a/public/sites/all/themes/gesso/sass/partials/components/_view.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_view.scss
@@ -16,6 +16,12 @@
   }
 }
 
+.view__more {
+  clear: both;
+  margin-bottom: 0.5em;
+  text-align: right;
+}
+
 .view__header {
   @extend %clearfix;
 }
