--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.mustache
@@ -45,7 +45,7 @@
                 {{&gt; organisms-innovation-teaser }}
               &lt;/div&gt;
             {{/ listItems.three }}
-            &lt;div class=&quot;view__footer&quot;&gt;
+            &lt;div class=&quot;view__more&quot;&gt;
               &lt;a href=&quot;#&quot; class=&quot;view__all&quot;&gt;View All Innovations&lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -61,7 +61,7 @@
                 {{&gt; organisms-resource-teaser }}
               &lt;/div&gt;
             {{/ listItems.three }}
-            &lt;div class=&quot;view__footer&quot;&gt;
+            &lt;div class=&quot;view__more&quot;&gt;
               &lt;a href=&quot;#&quot; class=&quot;view__all&quot;&gt;View All Resources&lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -77,7 +77,7 @@
                 {{&gt; organisms-funding-op-teaser }}
               &lt;/div&gt;
             {{/ listItems.three }}
-            &lt;div class=&quot;view__footer&quot;&gt;
+            &lt;div class=&quot;view__more&quot;&gt;
               &lt;a href=&quot;#&quot; class=&quot;view__all&quot;&gt;View All Funding Opportunies&lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
