--- a/public/sites/all/themes/gesso/sass/partials/global/extendables/_button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/extendables/_button.scss
@@ -17,7 +17,7 @@
   text-decoration: none;
   vertical-align: baseline;
 
-  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+  @if support-legacy-browser('ie', '6', '7') {
     *line-height: normal;
     *zoom: 1;
   }
