--- a/public/sites/all/themes/gesso/css/panels-admin/home.css
+++ b/public/sites/all/themes/gesso/css/panels-admin/home.css
@@ -1,3 +1,7 @@
+/* line 11, ../../sass/partials/layout/panels/_home.scss */
+.l-panels-home {
+  *zoom: 1;
+}
 /* line 9, ../../sass/partials/global/helpers/_clearfix.scss */
 .l-panels-home:after {
   display: table;
@@ -7,14 +11,17 @@
 .l-panels-home:after {
   clear: both;
 }
-/* line 16, ../../sass/partials/layout/panels/_home.scss */
+/* line 13, ../../sass/partials/layout/panels/_home.scss */
 .l-panels-home .l-hero,
 .l-panels-home .l-main,
 .l-panels-home .l-villain,
 .l-panels-home .l-postscript {
-  -webkit-box-sizing: border-box;
+  *zoom: 1;
   -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  *box-sizing: content-box;
+  *behavior: url("/sites/all/themes/gesso/polyfills/boxsizing.htc");
 }
 /* line 9, ../../sass/partials/global/helpers/_clearfix.scss */
 .l-panels-home .l-hero:after,
