--- a/public/sites/all/themes/gesso/css/panels-admin/sidebar-left.css
+++ b/public/sites/all/themes/gesso/css/panels-admin/sidebar-left.css
@@ -1,13 +1,13 @@
 @media (min-width: 43.75em) {
-  /* line 13, ../../sass/partials/layout/panels/_sidebar-left.scss */
+  /* line 12, ../../sass/partials/layout/panels/_sidebar-left.scss */
   .l-panels-sidebar-left.main.sidebar .l-sidebar {
     width: 20.58824%;
     float: left;
     margin-right: -100%;
-    margin-left: 0%;
+    margin-left: 0;
     clear: none;
   }
-  /* line 16, ../../sass/partials/layout/panels/_sidebar-left.scss */
+  /* line 15, ../../sass/partials/layout/panels/_sidebar-left.scss */
   .l-panels-sidebar-left.main.sidebar .l-main {
     width: 73.52941%;
     float: right;
@@ -17,6 +17,10 @@
   }
 }
 
+/* line 22, ../../sass/partials/layout/panels/_sidebar-left.scss */
+.l-panels-sidebar-left {
+  *zoom: 1;
+}
 /* line 9, ../../sass/partials/global/helpers/_clearfix.scss */
 .l-panels-sidebar-left:after {
   display: table;
@@ -26,15 +30,18 @@
 .l-panels-sidebar-left:after {
   clear: both;
 }
-/* line 29, ../../sass/partials/layout/panels/_sidebar-left.scss */
+/* line 24, ../../sass/partials/layout/panels/_sidebar-left.scss */
 .l-panels-sidebar-left .l-preface,
 .l-panels-sidebar-left .l-title,
 .l-panels-sidebar-left .l-main,
 .l-panels-sidebar-left .l-sidebar,
 .l-panels-sidebar-left .l-wrapper {
-  -webkit-box-sizing: border-box;
+  *zoom: 1;
   -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  *box-sizing: content-box;
+  *behavior: url("/sites/all/themes/gesso/polyfills/boxsizing.htc");
 }
 /* line 9, ../../sass/partials/global/helpers/_clearfix.scss */
 .l-panels-sidebar-left .l-preface:after,
