--- a/public/sites/all/themes/gesso/sass/partials/base/_normalize.scss
+++ b/public/sites/all/themes/gesso/sass/partials/base/_normalize.scss
@@ -25,7 +25,7 @@ video {
   display: inline-block;
   vertical-align: baseline;
 
-  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+  @if support-legacy-browser('ie', '6', '7') {
     *display: inline;
     *zoom: 1;
   }
@@ -41,7 +41,7 @@ template {
   display: none;
 }
 
-@if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+@if support-legacy-browser('ie', '6', '7') {
   // Address font-family inconsistency between textarea and other form elements.
   button,
   input,
@@ -75,7 +75,7 @@ samp {
   font-family: $monospace-font-family;
   font-size: 1em;
 
-  @if $legacy-support-for-ie6 {
+  @if support-legacy-browser('ie', '6') {
     _font-family: 'courier new', monospace;
   }
 }
@@ -91,7 +91,7 @@ textarea {
   margin: 0;
   max-width: 100%;
 
-  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+  @if support-legacy-browser('ie', '6', '7') {
     vertical-align: baseline;
     *vertical-align: middle;
   }
@@ -126,7 +126,7 @@ input[type="radio"] {
   @include box-sizing(border-box);
   padding: 0;
 
-  @if $legacy-support-for-ie7 {
+  @if support-legacy-browser('ie', '7') {
     *height: 13px;
     *width: 13px;
   }
