--- a/public/sites/all/themes/gesso/sass/partials/components/_vertical-tabs.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_vertical-tabs.scss
@@ -30,7 +30,7 @@
   margin: 0;
   padding: 0;
 
-  @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+  @if support-legacy-browser('ie', '6', '7') {
     *min-width: 0;
   }
 }
