--- a/public/sites/all/themes/gesso/sass/partials/global/helpers/_border-box.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/helpers/_border-box.scss
@@ -5,7 +5,7 @@
   @include box-sizing(border-box);
 
   // Courtesy of Zen Grids. Modified a bit.
-  @if ($legacy-support-for-ie7) {
+  @if support-legacy-browser('ie', '7') {
     @if $box-sizing-polyfill-path == "" {
       @warn "IE legacy support is on, but the $box-sizing-polyfill-path is empty.";
     }
