--- a/public/sites/all/themes/gesso/sass/partials/layout/panels/_detail.scss
+++ b/public/sites/all/themes/gesso/sass/partials/layout/panels/_detail.scss
@@ -5,9 +5,8 @@
 // Grid via: singularity.gs
 
 .l-panels-detail {
-  $grids: 1;
-  $grids: add-grid(12 at 700px);
-  $gutters: 2;
+  @include add-grid(12 at 700px);
+  @include add-gutter(2);
   &.main {
     &.main-sidebar { // 1, 2 have content
       @include breakpoint(700px) {
