--- a/public/sites/all/themes/gesso/sass/partials/components/_nav.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_nav.scss
@@ -55,7 +55,7 @@
   .nav__link {
     @include background-image(
       linear-gradient(
-        top,
+        to bottom,
         $gradient-light 0%,
         $gradient-dark 100%
       )
