--- a/public/sites/all/themes/gesso/sass/overrides/super_login/super-login.scss
+++ b/public/sites/all/themes/gesso/sass/overrides/super_login/super-login.scss
@@ -15,9 +15,14 @@
   }
 
   p.login-title {
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    -webkit-hyphens: none;
+    hyphens: none;
     border-bottom: 1px solid #cecfcb;
     font-size: 32px;
     font-weight: bold;
+    line-height: 1.1;
     margin: 0 0 1em 0;
     padding: 0 0 0.5em 0;
     text-align: center;
