--- a/public/sites/all/themes/gesso/sass/partials/components/_region-landing-title.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_region-landing-title.scss
@@ -4,22 +4,22 @@
   margin: 0;
   min-height: 288px;
   @include breakpoint(900px, $no-query: true) {
-    min-height: 300px;
+    min-height: 130px;
   }
   position: relative;
   z-index: 1;
-  &:after {
-    content: "";
-    display: block;
-    border-style: solid;
-    border-width: 300px 180px 0 0;
-    border-color: $orange transparent transparent transparent;
-    height: 0;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 0;
-  }
+  // &:after {
+  //   content: "";
+  //   display: block;
+  //   border-style: solid;
+  //   border-width: 300px 180px 0 0;
+  //   border-color: $orange transparent transparent transparent;
+  //   height: 0;
+  //   left: 0;
+  //   position: absolute;
+  //   top: 0;
+  //   width: 0;
+  // }
   &:before {
     content: "";
     display: block;
