initial styling for report button

--- a/public/sites/all/themes/gesso/sass/partials/components/_button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_button.scss
@@ -29,11 +29,17 @@
   @extend %button--member;
 }
 
-.button--edit { // has member edit
+.button--edit { // has edit icon
   @extend %button--edit;
+}
+
+.button--flag { // has flag icon
+  @extend %button--flag;
 }
 
 .button--submit {
   text-transform: uppercase;
 }
+
+
 
